# git-smee

./: .git-smee.toml  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.beads/: issues.jsonl
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  decision.yml  memory.yml  task.yml
.github/scripts/: test_update_homebrew_formula.py  update_homebrew_formula.py
.github/templates/: implementation-note.md
.github/workflows/: ci.yml  release.yml
archive/beads/: README.md
crates/git-smee-cli/: Cargo.toml
crates/git-smee-cli/src/: config_path.rs  diagnostics.rs  doctor.rs  main.rs  status.rs
crates/git-smee-cli/src/commands/: init.rs  install.rs  migrate_hooks.rs  mod.rs  run.rs
crates/git-smee-cli/tests/: cli_integration.rs  common.rs
crates/git-smee-core/: Cargo.toml
crates/git-smee-core/src/: config.rs  executor.rs  installer.rs  lib.rs  platform.rs  repository.rs  test_support.rs
crates/git-smee-core/src/executor/: redaction.rs  runner.rs  scheduler.rs  summary.rs
crates/git-smee-core/src/scripts/: hook_template_unix  hook_template_windows
crates/git-smee-core/tests/: config_integration.rs  installer_integration.rs
crates/git-smee-core/tests/fixtures/: malformed_git-smee_config.toml  simple_git-smee_config.toml
docs/: github-issue-migration.md
scripts/: beads_to_github.py
