[package]
name = "git-smee-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "git-smee"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git-smee-core = { path = "../git-smee-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.1"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3"
git2 = { version = "0.20", features = ["vendored-openssl"] }
