[package]
name = "git-smee-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
toml = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2" }
rayon = { version = "1" }
tempfile = "3"

[dev-dependencies]
assert2 = { workspace = true }
proptest = "1"
